@@ -29,3 +29,4 @@ PluginFilter.pluginfFilterName=Markierte
 
 Token.invalidToken=Ung\u00FCltiges Element
 
+AudioDescriptionFilter.Audiodescription=H\u00f6rfilm
